--- a/style.css
+++ b/style.css
@@ -2,8 +2,14 @@
 .cart-item{
     padding: 10px 20px;
     border: 5px solid azure;
-    background-color: rgb(243, 231, 231);
+    background-color: #FFFFFF;
     border-radius: 12px;
+    margin: 40px 0;
+}
+.container{
+    background-color: #F6F5FA;
+    height: 1000px;
+    width: 100%;
 }
 .cart-item img{
     width: 115px;
@@ -15,7 +21,10 @@
 .cart{
     width: 900px;
     height: 100%;
-    margin: 80px auto;
+    margin: 100px auto;
+    position: relative;
+    top: 60px;
+    
     
     
     
@@ -27,8 +36,8 @@
 }
 
 .btn{
-    margin: 0 8px;
-    text-decoration: none;
+   margin: 0 10px;
+
     
 }
 .text-field{
@@ -36,4 +45,16 @@
     text-align: center;
     border-radius: 8px;
     border-color: white;
+}
+h4{
+    padding: 0px 30px;
+}
+.cal-right{
+    text-align: end;
+    padding: 0 50px;
+}
+.calculate-section{
+    background-color:#FFFFFF ;
+    padding: 20px;
+    border-radius: 10px;
 }
